# sharom

./: .gitignore  CMakeLists.txt  build_cygwin.sh  build_msvc.sh
.github/: build_cmake.yml
.github/workflows/: build_cmake.yml
include/: api_symbol.h
src/: sharom.cpp  sharom.h
src/buffer/: CMakeLists.txt
src/buffer/include/: api_symbol.h  buffer.hpp  buffer_flags.hpp  c_api.h  settings.hpp
src/buffer/src/: buffer.cpp  buffer_impl.cpp  buffer_impl.hpp  c_api.cpp  settings.cpp
src/buffer/src/linux/: CMakeLists.txt  shared_memory.cpp  shared_memory.hpp
src/buffer/src/win/: CMakeLists.txt  shared_memory.cpp  shared_memory.hpp
src/exception/: CMakeLists.txt  sharom_exception.cpp
src/exception/include/: sharom_exception.hpp
src/mutex/: CMakeLists.txt  mutex.cpp
src/mutex/include/: mutex.hpp
src/mutex/linux/: CMakeLists.txt  mutex_impl.cpp  mutex_impl.hpp
src/mutex/win/: CMakeLists.txt  mutex_impl.cpp  mutex_impl.hpp
src/utility/: CMakeLists.txt  system_info.cpp  utility.cpp
src/utility/include/: system_info.hpp  utility.hpp
test/: mutex_test.cpp  test.cpp
